log
vi., 13 de may. de 2022 16:45:06: 
 sudoku.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:67:27: error: passing argument 2 of 'pushBack' makes pointer from integer without a cast [-Werror=int-conversion]
             pushBack(list,numeroColocar);
                           ^~~~~~~~~~~~~
In file included from test.c:4:0:
list.h:23:6: note: expected 'void *' but argument is of type 'int'
 void pushBack(List* list, void* data);
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
dc31009
vi., 13 de may. de 2022 16:45:29: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
0a89df1
vi., 13 de may. de 2022 16:49:59: 
 sudoku.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
2a4c939
vi., 13 de may. de 2022 16:50:18: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
de0ee22
vi., 13 de may. de 2022 16:50:38: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
7068117
vi., 13 de may. de 2022 16:57:51: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  2|4
total_score: 15/70
e1e006b
vi., 13 de may. de 2022 17:00:02: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
b215d60
vi., 13 de may. de 2022 17:01:32: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
6ca0bf5
vi., 13 de may. de 2022 17:03:06: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
b9c25f4
vi., 13 de may. de 2022 17:11:08: 
 sudoku.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:73:9: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
         if(comprobar[aux] = 1)
         ^~
cc1.exe: all warnings being treated as errors
Compilation failed
249b387
vi., 13 de may. de 2022 17:11:19: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
34a9e49
vi., 13 de may. de 2022 17:17:33: 
 sudoku.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 20/70
ecfa315
vi., 13 de may. de 2022 17:21:16: 
 sudoku.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
 tests:  3|4
total_score: 20/70
899bb94
vi., 13 de may. de 2022 17:21:52: 
 sudoku.c | 17 +----------------
 1 file changed, 1 insertion(+), 16 deletions(-)
 tests:  3|4
total_score: 20/70
e49c4d3
vi., 13 de may. de 2022 17:31:06: 
 sudoku.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:67:52: error: 'n' is a pointer; did you mean to use '->'?
       if(comprobarColumnas[n->sudo[i][j]] == 0 && n.sudo[i][j] != 0)
                                                    ^
                                                    ->
Compilation failed
0ff189f
vi., 13 de may. de 2022 17:31:21: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
a067182
vi., 13 de may. de 2022 17:32:19: 
 sudoku.c | 17 +----------------
 1 file changed, 1 insertion(+), 16 deletions(-)
 tests:  2|4
total_score: 15/70
d56d871
vi., 13 de may. de 2022 17:35:11: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
3c2a4c6
vi., 13 de may. de 2022 17:39:52: 
 sudoku.c | 21 +++++++++++++++++----
 1 file changed, 17 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:75:9: error: unused variable 'k' [-Werror=unused-variable]
     int k = subMatriz;
         ^
cc1.exe: all warnings being treated as errors
Compilation failed
5c40d80
vi., 13 de may. de 2022 17:40:08: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
d1c2703
vi., 13 de may. de 2022 17:40:31: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
a139ca4
vi., 13 de may. de 2022 17:41:29: 
 sudoku.c | 25 +++----------------------
 1 file changed, 3 insertions(+), 22 deletions(-)
 tests:  2|4
total_score: 15/70
d4c3364
vi., 13 de may. de 2022 17:43:25: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|4
total_score: 15/70
79b664c
vi., 13 de may. de 2022 17:43:58: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
2bf4e8c
vi., 13 de may. de 2022 17:46:19: 
 sudoku.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  2|4
total_score: 15/70
1738505
vi., 13 de may. de 2022 17:48:25: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
1ad50f7
vi., 13 de may. de 2022 17:52:38: 
 sudoku.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
2bcf791
vi., 13 de may. de 2022 17:55:44: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|4
total_score: 10/70
a51b77a
vi., 13 de may. de 2022 18:00:49: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
64c0b00
do., 15 de may. de 2022 21:45:12: 
 sudoku.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
52e1c3c
do., 15 de may. de 2022 21:53:58: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|3
total_score: 25/70
25568e8
do., 15 de may. de 2022 21:54:58: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  4|3
total_score: 30/70
951e1af
do., 15 de may. de 2022 22:03:30: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
ed3fab6
do., 15 de may. de 2022 22:05:18: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
a1ec8d2
do., 15 de may. de 2022 22:08:31: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:149:6: error: value computed is not used [-Werror=unused-value]
     (*cont++);
     ~^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c0fca0f
do., 15 de may. de 2022 22:13:38: 
 sudoku.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:152:5: error: value computed is not used [-Werror=unused-value]
     *cont++;
     ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
1459334
do., 15 de may. de 2022 22:13:48: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
455aa5f
